# rustyschwab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/schwab-rs/: Cargo.toml
crates/schwab-rs/src/: circuit_breaker.rs  client.rs  config.rs  error.rs  lib.rs  retry.rs  security.rs  telemetry.rs  utils.rs
crates/schwab-rs/src/auth/: headers.rs  mod.rs  pkce.rs  token_store.rs
crates/schwab-rs/src/endpoints/: accounts.rs  instruments.rs  market_data.rs  mod.rs  movers.rs  options.rs  price_history.rs  quotes.rs  trading.rs
crates/schwab-rs/src/streaming/: client.rs  message_handler.rs  mod.rs  subscription.rs
crates/schwab-rs/src/transport/: http.rs  mod.rs  websocket.rs
crates/schwab-rs/tests/: auth_unit_test.rs  config_unit_test.rs  error_unit_test.rs  oauth_integration_test.rs  retry_unit_test.rs
crates/schwab-types/: Cargo.toml
crates/schwab-types/src/: accounts.rs  common.rs  lib.rs  market_data.rs  streaming.rs  trading.rs
docs/: APP_CALLBACK.md  ARCHITECTURE_OVERVIEW.md  DEVELOPER_DOCUMENTATION.md  INDEX.md  ORDERS.md  QUICK_REFERENCE.md  QUICK_START.md  SETUP_GUIDE.md  STREAMING.md  TROUBLESHOOTING.md
examples/auth_test/: Cargo.toml
examples/auth_test/src/: main.rs
examples/comprehensive/: Cargo.toml
examples/comprehensive/src/: main.rs
examples/oauth_flow/: Cargo.toml
examples/oauth_flow/src/: main.rs
examples/streaming/: Cargo.toml
